# gibr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  __about__.py  install_test.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: lint.yml  pr.yml  release.yml  ruff.yml  test.yml
src/gibr/: branch.py  cli.py  config.py  error.py  factory.py  git.py  issue.py  logger.py  notify.py  registry.py
src/gibr/cli/: __init__.py  alias.py  create.py  group.py  init.py  issues.py
src/gibr/trackers/: __init__.py  azure.py  base.py  factory.py  forgejo.py  github.py  gitlab.py  jira.py  linear.py  monday.py  youtrack.py
tests/: test_azure_tracker.py  test_base.py  test_cli.py  test_config.py  test_create.py  test_factory.py  test_github_tracker.py  test_gitlab_tracker.py  test_init.py  test_issue.py  test_jira_tracker.py  test_linear_tracker.py  test_notify.py  test_registry.py
tests/trackers/: test_azure.py  test_jira.py  test_linear.py  test_monday.py
